hphp/hack/test/typecheck/class_refinements/classname+static.php.exp
File "classname+static.php", line 9, characters 7-17:
Invalid argument (Typing[4323])
  File "classname+static.php", line 13, characters 12-15:
  `TBox` is a constrained type parameter
  File "classname+static.php", line 13, characters 20-42:
  This type constraint is violated
  File "classname+static.php", line 13, characters 20-42:
  Expected a class with `{type T = _}`
  File "classname+static.php", line 5, characters 16-18:
  But got `Box`; implicitly defined constant `::class` is a string that contains the fully qualified name of `Box`
  File "classname+static.php", line 9, characters 7-10:
    where the class `Box` was referenced here via the keyword `self`
